--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -1,6 +1,13 @@
 @media (max-width: 800px) {
+    body{
+        height: 150vh;
+        width: 100vw;
+    }
     main {
+        align-items: center;
         flex-direction: column;
+        height: 100%;
+        margin-top: -80px;
     }
 
     .image {
@@ -8,10 +15,18 @@
         background-size: cover;
         height: 400px;
         width: 405px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 0;
+        padding-bottom: 300px;
     }
 
     .info {
         width: 405px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        border-top-right-radius: 0;
+
     }
 
     .info h1 {
