--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -1,36 +1,75 @@
 @media (max-width: 800px) {
     body{
-        height: 150vh;
-        width: 100vw;
-    }
-    main {
-        align-items: center;
+        display: flex;
         flex-direction: column;
-        height: 100%;
-        margin-top: -80px;
+        justify-content: center;
+        align-items: center;
+        height: 1000px;
+        width: 100%;
     }
-
-    .image {
-        background: url(../images/image-product-mobile.jpg);
-        background-size: cover;
-        height: 400px;
-        width: 405px;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        border-bottom-left-radius: 0;
-        padding-bottom: 300px;
-    }
-
-    .info {
-        width: 405px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        border-top-right-radius: 0;
-
-    }
-
-    .info h1 {
+    
+    main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         width: 100%;
     }
 
+    .image{
+        width: 405px;
+        padding: 200px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 0;
+    }
+
+    .info{
+        width: 405px;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 10px;
+    }
+    .info h1{
+        width: 70%;
+    }
+
+    .final-credits{
+        display: none;
+    }
+}
+
+@media (max-width: 500px){
+    body{
+        height: 800px;
+        width: 100%;
+    }
+
+    main{
+        width: 100%;
+    }
+
+    .image{
+        width: 340px;
+        padding: 135px;
+
+    }
+    .info{
+        width: 340px;
+    }
+    .info h1{
+        width: 100%;
+        font-size: 1.9rem;
+    }
+    .info p{
+        font-size: 0.81rem;
+    }
+    .info .price{
+        margin-top: 5px;
+    }
+    .info .price strong{
+        font-size: 2rem;
+    }
+
+    .info .button{
+        margin-top: 20px;
+    }
 }
