--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,7 +3,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: hsl(30, 38%, 92%);
     color: hsl(228, 12%, 48%);
@@ -81,4 +81,26 @@ main{
 
 .fa-cart-shopping{
     margin-right: 15px;
+}
+
+.final-credits{
+    background-color: hsl(158, 36%, 37%);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+.final-credits a{
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+}
+.final-credits a:hover{
+    transition: 0.2s ease;
+    text-decoration: underline white;
+    text-shadow: 0px 2px 6px white;
+    color: white;
 }
